ch05/luke/1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-security-context
  name: busybox-security-context
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
  - name: test
    emptyDir: {}
  containers:
  - command:
    - sh
    - "-c"
    - "sleep 1h"
    image: busybox:1.28
    name: busybox-security-context
    resources: {}
    volumeMounts:
    - name: test
      mountPath: /data/test
    securityContext:
      allowPrivilegeEscalation: false
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
