ch05/luke/2-violating-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: audited
spec:
  containers:
  - image: busybox:1.35.0
    name: busybox
    command: ["sh", "-c", "sleep 1h"]
