ch05/luke/3-denied-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: denied-replica-range
  name: denied-replica-range
spec:
  replicas: 15
  selector:
    matchLabels:
      app: denied-replica-range
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: denied-replica-range
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
