ch05/luke/3-replicalimits-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReplicaLimits
metadata:
  name: replica-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["ReplicaSet"]
  parameters:
    ranges:
    - min_replicas: 3
      max_replicas: 10
